<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kanban</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_create_task">Create New Task</string>
    <string name="action_create_project">Create New Project</string>
    <string name="action_show_project">Show Project</string>
    <string name="action_edit_project">Edit Project</string>
    <string name="action_destroy_project">Destroy Project</string>
    <string name="action_yes">Sim</string>
    <string name="action_no">Não</string>
    <string name="action_are_you_sure">Tem certeza?</string>

    <!-- Titles -->
    <string name="title_activity_create_task">CreateTaskActivity</string>
    <string name="title_activity_create_project">CreateProjectActivity</string>
    <!-- Create Task -->
    <string name="create_task_description_hint">Escreva uma tarefa</string>
    <string name="create_task_button_label">Salvar Tarefa</string>
    <!-- Create Project -->
    <string name="create_project_description_hint">Nome do projeto</string>
    <string name="create_project_button_label">Salvar Projeto</string>
    <string name="adapter_project_name_hint">Project Name Label</string>
    <string name="adapter_project_created_at_hint">08:00 2014/11/01</string>
    <string name="adapter_project_quantity">10</string>

</resources>