<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/adapter_project_created_at_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/adapter_project_created_at_hint"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/adapter_project_name_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:text="@string/adapter_project_name_hint"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="26sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/magazine_icon" />

        <TextView
            android:id="@+id/adapter_project_to_do_quantity_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adapter_project_quantity"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="36dp"
            android:layout_height="38dp"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/magazine_icon" />

        <TextView
            android:id="@+id/adapter_project_doing_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adapter_project_quantity"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="36dp"
            android:layout_height="46dp"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/magazine_icon" />

        <TextView
            android:id="@+id/adapter_project_done_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adapter_project_quantity"
            android:textSize="22sp" />

    </LinearLayout>

</LinearLayout>
